# DriftPilot

./: .env.example  .gitignore  AGENTS.md  BLOCKED.md  CODEX_HANDOFF.md  CODEX_TASKS.md  MIGRATION.md  OVERNIGHT_SUMMARY.md  PHASE_2_REVIEW.md  PHASE_3_REVIEW.md  PHASE_4_REVIEW.md  README.md  REFACTOR_PLAN.md  missing_items_plan.md  plan.md  pyproject.toml  refactor.plan  requirements.md
.codex/: config.toml  instructions.md
.playwright-cli/: page-2026-04-26T02-22-24-392Z.yml  page-2026-04-26T02-23-14-643Z.yml  page-2026-04-26T02-24-00-786Z.yml
config/: earnings_events.csv  pead_universe.csv  sector_map.csv  universe.csv
dgx/: brain_db.py  brain_db_pgvector.py  brain_embedder.py  brain_server.py  requirements.txt  setup_pgvector.sh  start_brain.sh  test_brain_db.py
docs/: AGENTIC_TRADER_REQUIREMENTS.md  AGENTIC_TRADER_VISION.md  ARCHITECTURE.md  DAILY_OPS_PLAYBOOK.md  DAY2_BUG_NOTES.md  DEFECTS.md  DOCS_INDEX.md  DRIFTPILOT_DESIGN.md  FEATURE_market_guardrails_and_volume_signal.md  LEGACY_REMOVAL_PLAN.md  LLD.md  OPERATIONS.md  PM_TRADING_BRAIN.md  PORTFOLIO_CONTROLLER_DESIGN.md  PROJECT_OVERVIEW.md  QWEN_ENRICHMENT_V2.md  REFACTOR_PLAN_V2_LIVE_OPERATOR.md  REFACTOR_PLAN_V3_CATALYST_LAYER.md  RESEARCH_PATTERNS.md  RUNBOOK_LIVE_PAPER.md  SIGNAL_ROUTER_AND_PORTFOLIO_MANAGER.md  V3_AGENT_PLAN.md
migrations/: 001_supabase_schema.sql  002_watchlist_execution_fields.sql  003_watchlist_exited_status.sql  004_operator_reset_and_candidate_status.sql  006_agent_layer.sql
reports/: COMPARISON.md  PAPER_DAY_2026-05-04.md  PAPER_DAY_2026-05-05.md  STATUS.md  catalyst_categories.json  catalyst_horizons.json  (+2 more)
(+358 files in other folders)
