[project]
name = "trading-bot"
version = "0.1.0"
description = "Paper trading bot with provider-neutral LLM strategy adapters."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "fastapi>=0.115.0",
    "google-genai>=1.0.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "openai>=1.60.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

