[project]
name = "trading-bot"
version = "0.1.0"
description = "Autonomous intraday paper-trading operator with signal registry, backtesting, and safety-gated live deployment."
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.35.0",
    "anthropic>=0.49.0",
    "apscheduler>=3.10.0",
    "databento>=0.53.0", # Phase 12 historical OHLCV pull/cache CLI.
    "fastapi>=0.115.0",
    "fredapi>=0.5.0",
    "google-genai>=1.0.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "numpy>=2.0.0",
    "openai>=1.60.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0", # Parquet cache writer/reader for Databento bars.
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.10.0",
    "uvicorn>=0.34.0",
    "yfinance>=0.2.50",
]

[project.optional-dependencies]
ai = [
    "torch>=2.5.0",
    "transformers>=4.48.0",
]
test = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
